dev iteration; bug fixes; header fixes

--- a/thingview/index.html
+++ b/thingview/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="src/assets/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ThingView</title>
+  <title>WoST-Hub Thing Viewer</title>
 </head>
 
-<body>
+<body style="margin:0">
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
