--- a/thingview/index.html
+++ b/thingview/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="src/assets/logo.png" />
+  <link rel="icon" type="image/png" href="/src/assets/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WoST-Hub Thing Viewer</title>
 </head>
