--- a/thingview/index.html
+++ b/thingview/index.html
@@ -10,7 +10,19 @@
 
 <body style="margin:0">
   <div id="app"></div>
-  <script type="module" src="/src/main.ts"></script>
+  <script type="module" src="/src/main.ts">
+    window.global = window;
+  </script>
+<!--  https://github.com/vitejs/vite/discussions/4479-->
+  <script type="module">
+      import process from "process/browser";
+      import { Buffer } from "buffer";
+      import EventEmitter from "events";
+
+      window.Buffer = Buffer;
+      window.process = process;
+      window.EventEmitter = EventEmitter;
+  </script>
 </body>
 
 </html>
