dev iteration; - switch to material icons (slightly smaller) - dynamic loading of accountsview; - experiment with using dialog plugin - strange quasar esm-bundler increase using 'useQuasar elsewhere'

--- a/thingview/index.html
+++ b/thingview/index.html
@@ -16,10 +16,10 @@
 <!--  https://github.com/vitejs/vite/discussions/4479-->
   <script type="module">
       import process from "process/browser";
-      import { Buffer } from "buffer";
+      // import { Buffer } from "buffer";
       import EventEmitter from "events";
 
-      window.Buffer = Buffer;
+      // window.Buffer = Buffer;
       window.process = process;
       window.EventEmitter = EventEmitter;
   </script>
