dev iteration; - support for multiple accounts - finish account edit dialog - add delete account confirmation dialog - improve TDialog component display

--- a/thingview/index.html
+++ b/thingview/index.html
@@ -15,12 +15,12 @@
   </script>
 <!--  https://github.com/vitejs/vite/discussions/4479-->
   <script type="module">
-      import process from "process/browser";
+      // import process from "process/browser";
       // import { Buffer } from "buffer";
       import EventEmitter from "events";
 
       // window.Buffer = Buffer;
-      window.process = process;
+      // window.process = process;
       window.EventEmitter = EventEmitter;
   </script>
 </body>
